--- a/style.css
+++ b/style.css
@@ -21,16 +21,18 @@ body {
 }
 
 .welcome-title {
+  text-align: center;
   font-size: 75px;
   color: #1f4782;
   text-shadow: 0 0 8px #9e4040;
+  margin-top: 40px; /* remonte le texte */
   margin-bottom: 20px;
 }
 
 /* 🖼️ Logo animé */
 .logo {
   width: 600px;
-  transform: scale(0.8);
+  transform: scale(1.0);
   animation: fadeZoom 2s ease-out forwards;
 
 }
@@ -57,7 +59,7 @@ button {
 }
 
 button:hover {
-  background-color: #a85cfb;
-  transform: scale(1.05);
+  background-color: #1f4782;
+  transform: scale(2.0);
 }
 
