--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /* 🌌 Fond immersif pour la page d’accueil */
 body {
-  background: #ffffff;
-  color: #1f4782;
+  background-image: "bgprofil.png"; /* ou "assets/bgProfil.jpg" si dans un dossier */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   font-family: 'Cinzel Decorative', serif;
   margin: 0;
   padding: 0;
@@ -117,4 +119,22 @@ button {
 button:hover {
   background-color: #1f4782;
   transform: scale(2.0);
+}
+
+.back-button {
+  display: block;
+  margin: 40px auto 20px;
+  padding: 10px 20px;
+  background-color: #444;
+  color: #f0f0f0;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  font-family: 'Raleway', sans-serif;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.back-button:hover {
+  background-color: #8a2be2;
 }
