--- a/style.css
+++ b/style.css
@@ -44,10 +44,13 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: 600px;
+  max-width: 900px;
   margin: 40px auto;
   padding: 30px;
-  background-color: rgba(26, 19, 51, 0.7);
+  background-image: "assets/bgprofil.png"; /* ou "assets/bgProfil.jpg" si dans un dossier */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   border-radius: 12px;
   box-shadow: 0 0 16px #8a2be2;
 }
