--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* 🌌 Fond immersif */
 body {
-  background-image: url("assets/img/bgprofil.png");
+  background-image: url("assets/img/bg.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -57,7 +57,6 @@ body {
 
 #introContent {
   position: absolute;
-  z-index: 4;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -72,7 +71,6 @@ body {
   text-shadow: 0 0 8px #8a2be2;
   margin-bottom: 20px;
   font-family: 'AsianSkyline', serif;
-  z-index: 4;
 }
 
 #introContent button {
@@ -93,7 +91,7 @@ body {
 
 /* 🖼️ Logo animé */
 .logo {
-  max-width: 300px;
+  max-width: 150px;
   margin-bottom: 20px;
   animation: fadeZoom 2s ease-out forwards;
 }
