--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ body {
   position: absolute;
   top: 0;
   height: 100%;
-  width: auto;
   opacity: 0;
   transition: transform 1.5s ease, opacity 1s ease;
 }
@@ -53,8 +52,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw; /* largeur totale */
-  height: 80vh; /* hauteur totale */
+  width: 100%; /* largeur totale */
+  height: 100%; /* hauteur totale */
   object-fit: cover; /* ajuste sans déformation */
   opacity: 0;
   z-index: 1; /* reste en arrière-plan */
