--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ body {
 
 #introContent {
   position: absolute;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   opacity: 0;
