--- a/style.css
+++ b/style.css
@@ -38,27 +38,17 @@ body {
   transition: transform 1.5s ease, opacity 1s ease;
 }
 
-#imgBlue {
-  left: 100%;
-  z-index: 3;
-}
-
-#imgRed {
-  right: 100%;
-  z-index: 2;
-}
+#imgBlue { left: 100%; z-index: 3; }
+#imgRed { right: 100%; z-index: 2; }
 
 #imgFusion {
-  position: absolute;
-  top: 0;
   left: 0;
-  width: 100%; /* largeur totale */
-  height: 100%; /* hauteur totale */
-  object-fit: cover; /* ajuste sans déformation */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   opacity: 0;
-  z-index: 1; /* reste en arrière-plan */
+  z-index: 1;
 }
-
 
 #introContent {
   position: absolute;
@@ -72,16 +62,16 @@ body {
 }
 
 #introContent h2 {
-  font-size: 150px;
+  font-size: 100px;
   color: #f0f0f0;
   text-shadow: 0 0 15px #083150;
   margin-bottom: 20px;
-  font-family: 'College Squad', serif;
+  font-family: 'AsianSkyline', serif;
 }
 
 #introContent button {
-  padding: 35px 45px;
-  font-size: 30px;
+  padding: 15px 25px;
+  font-size: 50px;
   background-color: #083150;
   color: white;
   border: none;
@@ -98,7 +88,7 @@ body {
 
 /* 🖼️ Logo animé */
 #Citylogo {
-  max-width: 512px;
+  max-width: 600px;
   width: 100%;
   margin-bottom: 20px;
   animation: fadeZoom 2s ease-out forwards;
