--- a/style.css
+++ b/style.css
@@ -62,16 +62,16 @@ body {
 }
 
 #introContent h2 {
-  font-size: 100px;
+  font-size: 200px;
   color: #f0f0f0;
   text-shadow: 0 0 15px #083150;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-family: 'AsianSkyline', serif;
 }
 
 #introContent button {
   padding: 15px 25px;
-  font-size: 50px;
+  font-size: 60px;
   background-color: #083150;
   color: white;
   border: none;
@@ -90,7 +90,7 @@ body {
 #Citylogo {
   max-width: 600px;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   animation: fadeZoom 2s ease-out forwards;
 }
 
@@ -129,11 +129,11 @@ body {
 }
 
 .rp-form h2 {
-  font-size: 75px;
+  font-size: 100px;
   color: #ffffff;
   margin-bottom: 5px;
   text-shadow: 0 0 15px #9b1e23;
-  font-family: 'Cinzel Decorative', serif;
+  font-family: 'College Squad', serif;
   text-align: center;
 }
 
@@ -144,7 +144,7 @@ body {
   margin: 10px 0;
   border-radius: 8px;
   border: none;
-  font-size: 30px;
+  font-size: 40px;
   font-family: 'Raleway', sans-serif;
   background-color: #083150;
 }
@@ -174,18 +174,19 @@ body {
 
 /* 📖 Page profil RP */
 .rp-profile {
-  max-width: 900px;
+  max-width: 2048px;
   margin: 40px auto;
   padding: 30px;
   background-color: rgba(8, 49, 80, 0.9);
   border-radius: 12px;
   box-shadow: 0 0 16px #9b1e23;
   color: #f0f0f0;
+  font-size: 40px;
   font-family: 'College Squad', sans-serif;
 }
 
 .rp-profile h2 {
-  font-size: 50px;
+  font-size: 75px;
   text-align: center;
   text-shadow: 0 0 10px #9b1e23;
   margin-bottom: 30px;
